# Fish-SLAP

./: .gitignore  README.md  init.sql  pyproject.toml
slap/: db.py  landmark_loader.py  main.py  slap.py  train_slap.py
viikkoraportit/: viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md
